commit full cdc

--- a/cdc.html
+++ b/cdc.html
@@ -39,7 +39,61 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
+          <h1>Etude de l'existant</h1>
 
+          <h2>Contexte</h2>
+
+            <p>La Bibliothèque du Centre d'études théâtrales (BCET) est une bibliothèque faisant partie du réseau des bibliothèques de l'Université Catholique de Louvain (BIUL). C'est une filiale délocalisée de la Bibliothèque des arts et lettres (BFLT) faisant partie du même réseau.</p>
+
+             <p>La BCET compte environ 40000 monographies ainsi que plusieurs dizaines de périodiques qui ne sont pas, en raison de la configuration de la bibliothèque, en accès libre. Les monographies sont classées par taille (in-4\degres, 8\degres, 12\degres, 16\degres, 18\degres et 24\degres) puis selon un numéro séquentiel.</p>
+
+             <p>En raison du déménagement du Musée L (ex Musée de Louvain-la-Neuve) qui occupait des locaux dans le même bâtiment que la BFLT, des espaces sont maintenant disponibles afin de ramener le fonds de la BCET sous le toit de sa "bibliothèque-mère", la BFLT. Ce déménagement permettra également qu'au moins une partie du fonds soit directement accessible au public.</p>
+
+            <p>Ce cahier des charges s'attachera donc à soulever divers éléments relatifs au déménagement de la BCET dans les locaux de la BFLT.</p>
+
+          <h2><i>user stories</i></p>
+
+            <ul>
+
+                <li>En tant que SCEB, je veux que les BIUL se conforment au plan de classement de la LC afin d'instaurer une certaine uniformité.</li>
+
+                <li>En tant que BCET, je veux déménager mon fonds en BFLT afin de regrouper en une seule localisation les collections appartenant à la BFLT.</li>
+
+                <li>En tant que BCET, je veux élaguer mon fonds afin de ne pas déplacer des ouvrages inutilement.</li>
+
+                <li>En tant que BCET, je veux envoyer les ouvrages de mon fonds qui ne concernent pas directement les arts du spectacle dans les bibliothèques ou départements de la BFLT qui leurs correspondraient mieux.</li>
+
+                <li>En tant que BCET, je veux déterminer quels ouvrages seront disponibles en accès libre et quels ouvrages iront en magasin dans le nouveau lieu afin de traiter prioritairement les premiers.</li>
+
+                <li>En tant que BCET, je veux créer un nouveau plan de classement pour mon fonds afin de pouvoir déménager dans de bonnes conditions.</li>
+
+                <li>En tant que BCET, je veux modifier mon plan de classement afin qu'il soit adapté à des collections en libre accès.</li>
+
+                <li>En tant que BCET, je veux que mon nouveau plan de classement soit proche de celui de la BFLT afin que mon fonds s'intègre bien dans le nouveau lieu.</li>
+
+                <li>En tant que BCET, je veux que mon nouveau plan de classement prévoit de regrouper les ouvrages d'une même collection (ex : \textit{Actes Sud Papiers}, \textit{Lansman}, etc.).</li>
+
+                <li>En tant que BCET, je veux que mon nouveau plan de classement réponde aux exigences du SCEB.</li>
+
+                <li>En tant que BCET, je veux modifier les cotes de tous les ouvrages de mon fonds afin qu'elles respectent le nouveau plan de classement.</li>
+
+                <li>En tant que BCET, je veux récupérer les cotes LC des notices importées dans le catalogue afin de gagner du temps dans l'attribution des nouvelles cotes.</li>
+
+                <li>En tant que BCET, je veux modifier toutes les notices d'exemplaires des ouvrages de mon fonds dans le SIGB Virtua afin que les anciennes cotes soient remplacées par les nouvelles.</li>
+
+                <li>En tant que BCET, je veux automatiser le remplacement des cotes dans les notices d'exemplaires afin de gagner du temps.</li>
+
+                <li>En tant que BCET, je veux apposer des étiquettes avec les nouvelles cotes de rangement sur chaque ouvrage de la bibliothèque.</li>
+
+                <li>En tant que BCET, je veux déplacer physiquement les ouvrages dans la bibliothèque afin d'appliquer le nouveau plan de classement.</li>
+
+                <li>En tant que BCET, je veux modifier la configuration de ma bibliothèque afin de pouvoir déplacer physiquement les ouvrages.</li>
+
+                <li>En tant que BFLT, je veux que le fonds de la BCET arrive déjà recoté.</li>
+
+                <li>En tant que BFLT, je veux que le fonds de la BCET arrive déjà classé en fonction du nouveau plan de classement afin que le déballage et le rangement soient rapides.</li>
+
+            </ul>
          
        </div>
      </div>
