commit corr cdc

--- a/cdc.html
+++ b/cdc.html
@@ -51,7 +51,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
             <p>Ce cahier des charges s'attachera donc à soulever divers éléments relatifs au déménagement de la BCET dans les locaux de la BFLT.</p>
 
-          <h2><i>user stories</i></p>
+          <h2><i>user stories</i></h2>
 
             <ul>
 
