--- a/dd1.html
+++ b/dd1.html
@@ -40,7 +40,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <div class="container-fluid">
         <div class="side-body">
 
-         <a href="pdf/p14.pdf"> P14</a>
+         <a target="_blank" href="pdf/p14.pdf"> P14</a>
        </div>
      </div>
    </div>
