--- a/navbar.html
+++ b/navbar.html
@@ -117,7 +117,7 @@
                 <div id="dropdown3-lvl1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Link</a></li>
+                      <li class="active"><a href="cdc.html">Etude de l'existant</a></li>
                       <li class="active"><a href="#">Link</a></li>
                       <li class="active"><a href="#">Link</a></li>
 
