--- a/dd2.html
+++ b/dd2.html
@@ -42,7 +42,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <h1>Plan du dossier documentaire</h1>
         <ol>
             <li><a href="https://www.w3.org/standards/techs/owl#w3c_all">Site officiel</a></li>
-            <li><a href="./dd1.html">Qu'est-ce que OWL ?</a></li>
+            <li><a href="">Qu'est-ce que OWL ?</a></li>
             <ol>
                 <li>Définitions</li>
                 <li>Naissance de OWL</li>
