--- a/navbar.html
+++ b/navbar.html
@@ -110,14 +110,14 @@
               <!-- Dropdown 3-->
               <li class="panel panel-default active" id="dropdown">
                 <a data-toggle="collapse" href="#dropdown3-lvl1">
-                  <span class="glyphicon glyphicon-file"></span> Cachier des charges <span class="caret"></span>
+                  <span class="glyphicon glyphicon-file"></span> Cahier des charges <span class="caret"></span>
                 </a>
 
                 <!-- Dropdown level 1 -->
                 <div id="dropdown3-lvl1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="cdc.html">Etude de l'existant</a></li>
+                      <li class="active"><a href="./cdc.html">Etude de l'existant</a></li>
                       <li class="active"><a href="#">Link</a></li>
                       <li class="active"><a href="#">Link</a></li>
 
