--- a/dd2.html
+++ b/dd2.html
@@ -39,26 +39,26 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
-        <h1>Plan du dossier documentaire</h1>
-        <ol>
-            <li><a href="https://www.w3.org/standards/techs/owl#w3c_all">Site officiel</a></li>
-            <li><a href="">Qu'est-ce que OWL ?</a></li>
-            <ol>
-                <li>Définitions</li>
-                <li>Naissance de OWL</li>
-                <li>Niveaux de OWL</li>
-            </ol>
-            <li><a href="">Utilisation</a></li>
-            <ol>
-                <li>Syntaxe et sémantique</li>
-                <li>Guides d'utilisation</li>
-                <li>Métadonnées associées</li>
-                <li>Outils</li>
-            </ol>
-            <li><a href="">Cas d'application en sciences de l'information</a></li>
-         <a target="_blank" href="pdf/p14.pdf"> P14</a>
-         <a href="pdf/p14.pdf"> P14</a>
-        </ol>
+        <h1>Qu'est-ce que OWL ?</h1>
+          <ol>
+              <li>Définitions</li>
+              La plupart des <a href="./dd3.html">Guides d'utilisation</a> proposent une définition avant d'aborder les aspects plus techniques.
+              <ul>
+                <li><a href="pdf/owl-8.pdf">OWL: Web Ontology Language</a> dans Encyclopedia of Database Systems, L. LIU et M. T. ÖZSU, 2009, p. 2008‑2009</li>
+                <li><a href="https://www.w3.org/TR/2004/REC-owl-features-20040210/">OWL Web Ontology Language
+Overview</a>, 2004</li>
+                <li><a href="https://www.w3.org/TR/2012/REC-owl2-overview-20121211/">OWL 2 Web Ontology Language 
+Document Overview (Second Edition)</a>, 2012</li>
+              </ul>
+              <li>Naissance de OWL</li>
+              <ul>
+                <li><a href="pdf/owl-5.pdf">From SHIQ and RDF to OWL: the making of a Web Ontology Language</a>, I. Horrocks, 2003</li>
+              </ul>
+              <li>Niveaux de OWL</li>
+              <ul>
+                <li><a href="https://www.cambridgesemantics.com/semantic-university/flavors-owl">Flavors of OWL</a></li>
+              </ul>
+          </ol>
        </div>
      </div>
    </div>
