--- a/dd2.html
+++ b/dd2.html
@@ -42,9 +42,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <h1>Qu'est-ce que OWL ?</h1>
           <ol>
               <li>Définitions</li>
-              La plupart des <a href="./dd3.html">Guides d'utilisation</a> proposent une définition avant d'aborder les aspects plus techniques.
+              La plupart des <a href="./dd3.html">Guides d'utilisation</a> proposent également une définition avant d'aborder les aspects plus techniques.
               <ul>
-                <li><a href="pdf/owl-8.pdf">OWL: Web Ontology Language</a> dans Encyclopedia of Database Systems, L. LIU et M. T. ÖZSU, 2009, p. 2008‑2009</li>
+                <li><a href="pdf/owl-08.pdf">OWL: Web Ontology Language</a> dans Encyclopedia of Database Systems, L. LIU et M. T. ÖZSU, 2009, p. 2008‑2009</li>
                 <li><a href="https://www.w3.org/TR/2004/REC-owl-features-20040210/">OWL Web Ontology Language
 Overview</a>, 2004</li>
                 <li><a href="https://www.w3.org/TR/2012/REC-owl2-overview-20121211/">OWL 2 Web Ontology Language 
@@ -52,7 +52,7 @@ Document Overview (Second Edition)</a>, 2012</li>
               </ul>
               <li>Naissance de OWL</li>
               <ul>
-                <li><a href="pdf/owl-5.pdf">From SHIQ and RDF to OWL: the making of a Web Ontology Language</a>, I. Horrocks, 2003</li>
+                <li><a href="pdf/owl-05.pdf">From SHIQ and RDF to OWL: the making of a Web Ontology Language</a>, I. Horrocks, 2003</li>
               </ul>
               <li>Niveaux de OWL</li>
               <ul>
