--- a/dd3.html
+++ b/dd3.html
@@ -39,26 +39,26 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
-        <h1>Qu'est-ce que OWL ?</h1>
-          <ol>
-              <li>Définitions</li>
-              La plupart des <a href="./dd3.html">Guides d'utilisation</a> proposent également une définition avant d'aborder les aspects plus techniques.
-              <ul>
-                <li><a target="_blank" href="pdf/owl-08.pdf">OWL: Web Ontology Language</a> dans Encyclopedia of Database Systems, L. LIU et M. T. ÖZSU, 2009, p. 2008‑2009</li>
-                <li><a target="_blank" href="https://www.w3.org/TR/2004/REC-owl-features-20040210/">OWL Web Ontology Language
-Overview</a>, 2004</li>
-                <li><a target="_blank" href="https://www.w3.org/TR/2012/REC-owl2-overview-20121211/">OWL 2 Web Ontology Language 
-Document Overview (Second Edition)</a>, 2012</li>
-              </ul>
-              <li>Naissance de OWL</li>
-              <ul>
-                <li><a target="_blank" href="pdf/owl-05.pdf">From SHIQ and RDF to OWL: the making of a Web Ontology Language</a>, I. Horrocks, 2003</li>
-              </ul>
-              <li>Niveaux de OWL</li>
-              <ul>
-                <li><a target="_blank" href="https://www.cambridgesemantics.com/semantic-university/flavors-owl">Flavors of OWL</a></li>
-              </ul>
-          </ol>
+        <h1>Utilisation</li>
+            <ol>
+                <li>Guides pratiques</li>
+                <ul>
+                  <li><a target="_blank" href="pdf/owl-01.pdf">Chapter 5 - OWL: Web Ontology Language</a> dans A Developer’s Guide to the Semantic Web, Y. Liyang, 2014</li>
+                  <li><a target="_blank" href="pdf/owl-04.pdf">The Web Ontology Language (OWL) and its applications</a>, J. Cardoso et A. M. Pinto, 2015</li>
+                  <li><a target="_blank" href="pdf/owl-06.pdf">Introduction à OWL, un langage XML d'ontologies Web</a>, X. Lacot, 2005</li>
+                </ul>
+                <li>Métadonnées associées</li>
+                <ul>
+                  <li><a target="_blank" href="pdf/owl-13.pdf">Metadata for Web Ontologies and Rules: Current Practices and Perspectives</a> dans Metadata and Semantic Research, C. Tejo-Alonso, D. Berruta, L. Polo et S. Fernandez, 2011, p.56-67</li>
+                </ul>
+                <li>Outils</li>
+                <ul>
+                  <li><a target="_blank" href="pdf/owl-12.pdf">Web Ontology Language Editors for Semantic Web - A Survey</a>, N. Madurai Meenachi et M. Sai Baba, 2012</li>
+                </ul>
+            </ol>
+         <a target="_blank" href="pdf/p14.pdf"> P14</a>
+         <a href="pdf/p14.pdf"> P14</a>
+        </ol>
        </div>
      </div>
    </div>
