--- a/dd3.html
+++ b/dd3.html
@@ -39,7 +39,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
-        <h1>Utilisation</li>
+        <h1>Utilisation</h1>
             <ol>
                 <li>Guides pratiques</li>
                 <ul>
