--- a/dd1.html
+++ b/dd1.html
@@ -42,22 +42,20 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <h1>Plan du dossier documentaire</h1>
         <ol>
             <li><a href="https://www.w3.org/standards/techs/owl#w3c_all">Site officiel</a></li>
-            <li><a href="./dd1.html">Qu'est-ce que OWL ?</a></li>
+            <li><a href="./dd2.html">Qu'est-ce que OWL ?</a></li>
             <ol>
                 <li>Définitions</li>
                 <li>Naissance de OWL</li>
                 <li>Niveaux de OWL</li>
             </ol>
-            <li><a href="">Utilisation</a></li>
+            <li><a href="./dd3.html">Utilisation</a></li>
             <ol>
                 <li>Syntaxe et sémantique</li>
                 <li>Guides d'utilisation</li>
                 <li>Métadonnées associées</li>
                 <li>Outils</li>
             </ol>
-            <li><a href="">Cas d'application en sciences de l'information</a></li>
-         <a target="_blank" href="pdf/p14.pdf"> P14</a>
-         <a href="pdf/p14.pdf"> P14</a>
+            <li><a href="./dd4.html">Cas d'application en sciences de l'information</a></li>
         </ol>
        </div>
      </div>
