--- a/dd4.html
+++ b/dd4.html
@@ -39,23 +39,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
-        <h1>Utilisation</h1>
-            <ol>
-                <li>Guides pratiques</li>
-                <ul>
-                  <li><a target="_blank" href="pdf/owl-01.pdf">Chapter 5 - OWL: Web Ontology Language</a> dans A Developer’s Guide to the Semantic Web, Y. Liyang, 2014</li>
-                  <li><a target="_blank" href="pdf/owl-04.pdf">The Web Ontology Language (OWL) and its applications</a>, J. Cardoso et A. M. Pinto, 2015</li>
-                  <li><a target="_blank" href="pdf/owl-06.pdf">Introduction à OWL, un langage XML d'ontologies Web</a>, X. Lacot, 2005</li>
-                </ul>
-                <li>Métadonnées associées</li>
-                <ul>
-                  <li><a target="_blank" href="pdf/owl-13.pdf">Metadata for Web Ontologies and Rules: Current Practices and Perspectives</a> dans Metadata and Semantic Research, C. Tejo-Alonso, D. Berruta, L. Polo et S. Fernandez, 2011, p.56-67</li>
-                </ul>
-                <li>Outils</li>
-                <ul>
-                  <li><a target="_blank" href="pdf/owl-12.pdf">Web Ontology Language Editors for Semantic Web - A Survey</a>, N. Madurai Meenachi et M. Sai Baba, 2012</li>
-                </ul>
-            </ol>
+        <h1>Cas d'application en sciences de l'information</h1>
+        <ul>
+          <li><a target="_blank" href="pdf/owl-02.pdf">An Evolutive Process to Convert Glossaries into Ontologies</a>, J. R. Hilera, C. Pagés, J. J. Martínez, J. A. Gutiérrez et L. de-Marcos, 2010</li>
+          <li><a target="_blank" href="pdf/owl-03.pdf">Applying the Web ontology language to management information definitions</a>, J. E. L. de Vergara, V. A. Villagra et J. Berrocal, 2004</li>
+          <li><a target="_blank" href="pdf/owl-07.pdf">OWL Exports from a Full Thesaurus</a>, J. ven Eman, 2005</li>
+          <li><a target="_blank" href="pdf/owl-09.pdf">Premis Owl</a>, S. Coppens, R. Verborgh, S. Peyrard et al., 2015</li>
+          <li><a target="_blank" href="pdf/owl-11.pdf">Visualizing OPAC subject headings</a>, I. Papadakis, M. Stefanidakis et A. Tzali, 2008</li>
+        </ul>
+
         </ol>
        </div>
      </div>
