--- a/navbar.html
+++ b/navbar.html
@@ -76,16 +76,17 @@
               <!-- Dropdown 2-->
               <li class="panel panel-default active" id="dropdown">
                 <a data-toggle="collapse" href="#dropdown2-lvl1">
-                  <span class="glyphicon glyphicon-folder-open"></span> Dossier documentaire <span class="caret"></span>
+                  <span class="glyphicon glyphicon-folder-open"></span> Dossier documentaire - OWL<span class="caret"></span>
                 </a>
 
                 <!-- Dropdown level 1 -->
                 <div id="dropdown2-lvl1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Link</a></li>
-                      <li class="active"><a href="#">Link</a></li>
-                      <li class="active"><a href="#">Link</a></li>
+                      <li class="active"><a href="./dd1.html">Plan du dossier documentaire</a></li>
+                      <li class="active"><a href="./dd2.html">Qu'est-ce que OWL ?</a></li>
+                      <li class="active"><a href="./dd3.html">Utilisation</a></li>
+                      <li class="active"><a href="./dd4.html">Cas d'application en sciences de l'information</a></li>
 
                       <!-- Dropdown level 2 -->
                       <li class="panel panel-default active" id="dropdown">
