--- a/navbar.html
+++ b/navbar.html
@@ -119,8 +119,8 @@
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
                       <li class="active"><a href="./cdc.html">Etude de l'existant</a></li>
-                      <li class="active"><a href="#">Link</a></li>
-                      <li class="active"><a href="#">Link</a></li>
+                      <li class="active"><a href="./cdc1.html">Analyse des besoins</a></li>
+                      <li class="active"><a href="./cdc2.html">Grandes étapes du projet</a></li>
 
                       <!-- Dropdown level 2 -->
                       <li class="panel panel-default active" id="dropdown">
