--- a/dd5.html
+++ b/dd5.html
@@ -39,23 +39,13 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
-        <h1>Plan du dossier documentaire</h1>
-        <ol>
-            <li><a href="https://www.w3.org/standards/techs/owl#w3c_all">Site officiel</a></li>
-            <li><a href="./dd2.html">Qu'est-ce que OWL ?</a></li>
-            <ol>
-                <li>Définitions</li>
-                <li>Naissance de OWL</li>
-                <li>Niveaux de OWL</li>
-            </ol>
-            <li><a href="./dd3.html">Utilisation</a></li>
-            <ol>
-                <li>Guides d'utilisation</li>
-                <li>Métadonnées associées</li>
-                <li>Outils</li>
-            </ol>
-            <li><a href="./dd4.html">Cas d'application en sciences de l'information</a></li>
-        </ol>
+        <h1>Organisation du dossier documentaire</h1>
+        <p>J'ai décidé de découper mon dossier documentaire en 4 sections qui concernent chacune un des grands aspects qu'il me semblait important de traiter avec ce dossier. La première section est simplement un lien vers le site officiel de la technologie qui comprend une grande quantité de documentation intéressante sur OWL. Il me semblait peu utile de faire des liens vers les différentes parties de ce site officiel dans les autres sections, puisque l'information est à portée de clic de l'utilisateur et cela n'aurait fait que parasiter les autres documents proposés dans le dossier.</p>
+        <p>Les trois sections suivantes proposent des documents dans un certain ordre de progression : d'abord, comprendre ce qu'est OWL, ensuite comment l'utiliser et enfin, présenter des cas d'application concrète. Ces trois sections sont divisées pour certaines en sous-sections plus précises. J'ai décidé de créer une page par section, reprenant toutes les sous-sections de celle-ci. En effet, il ne me semblait pas très intéressant de créer une page distincte pour des sous-sections ne contenant qu'un ou deux documents. Cela aurait participer à augmenter le travail de l'utilisateur (jongler entre un plus grand nombre de pages) et sa confusion (dans quelle section était cette sous-section déjà ?).</p>
+        <p>L'utilisateur peut accéder directement aux pages des différentes sections depuis la page reprenant le plan via les hyperliens repris dans celui-ci ou via le menu situé à gauche. Ces deux possibilités lui permettent de circuler facilement d'une page à l'autre.</p>
+
+
+
        </div>
      </div>
    </div>
