--- a/navbar.html
+++ b/navbar.html
@@ -70,6 +70,7 @@
                       <li class="active"><a href="./dd2.html">Qu'est-ce que OWL ?</a></li>
                       <li class="active"><a href="./dd3.html">Utilisation</a></li>
                       <li class="active"><a href="./dd4.html">Cas d'application en sciences de l'information</a></li>
+                      <li class="active"><a href="./dd5.html">Construction du dossier documentaire</a></li>
                     </ul>
                   </div>
                 </div>
