--- a/qe2.html
+++ b/qe2.html
@@ -39,48 +39,22 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <!-- Main Content -->
       <div class="container-fluid">
         <div class="side-body">
-          <h1>Question essentielle 1</h1>
-          <h2>Quels sont les avantages et les inconvénients à pouvoir utiliser un ordinateur pour automatiser certaines parties du travail d'un professionnel de l'information et de la documentation ?</h2>
-          <h3>Quelles tâches automatisées ?</h3>
+          <h1>Question essentielle 2</h1>
+          <h2>En quoi l'utilisation de méthodes utilisées pour la création de produits ou de services, comme par exemple le design thinking, est un enjeu pour notre profession ?</h2>
 
-          <p>Aujourd'hui l'automatisation par ordinateur de certaines parties du travail est une réalité dans le domaine de l'information et de la documentation, comme dans bien d'autres domaines.</p>
-          <p>Elle touche directement les catalogues et par extension une bonne partie de la chaîne du livre (acquisitions, circulation des documents, etc.) au travers des systèmes intégrés de gestion de bibliothèque, et plus récemment, des automates de prêt. Avec le développement croissant des MOOCs, c'est l'aspect "formation" du métier qui commence à être automatisé.</p>
-          <p>Dans le domaine de la veille également, de nombreux processus peuvent être automatisés grâce à des outils informatiques qui permettent de récolter automatiquement l'information, de la trier, de l'analyser et d'en restituer l'essentiel.</p>
+          <p>Le <i>Design Thinking</i> est une méthode d'innovation inspirée des techniques utilisées par les designers. On part d'un problème (que rencontrent les usagers) auquel on va chercher une solution (dans le cas présent, cette solution peut être un produit ou un service). Avant de commencer à chercher une solution au problème, on va analyser le probléme et son origine en essayant de se rapprocher au maximum du point de vue de l'usager.</p>
 
+          <p>L'idée est donc de mettre l'usager au centre, de trouver une solution au problème qui représente une <i>user experience</i> positive pour lui.</p>
 
-          <h3>Avantages</h3>
-          <h4>Gain de temps dans la réalisation de certaines tâches</h4>
-          <p>C'est le fondement de l'automatisation. Quel intérêt y aurait-il à automatiser des tâches qui peuvent être plus rapidement effectuées par des humains ? A titre d'illustration, il semble évident que scanner des codes barres sur une carte de lecteur et des ouvrages est plus rapide que de remplir manuellement une fiche de prêt.</p>
+          <p>Dans son article <i>Design Thinking</i>, Steven J. Bell explique qu'il existe quatre niveaux d'interaction avec l'usager, qui sont dans l'ordre croissant la "commodité", le "bien", le "service" et enfin l'"expérience". Il souligne également que la plupart des bibliothèques se tiennent au niveau de la "commodité", qui est le niveau le plus bas de l'échelle, en fournissant simplement de l'information. L'objectif du <i>Design Thinking</i> va être de permettre à la bibliothèque d'innover afin de s'élever dans l'échelle des interactions et de proposer une "expérience" aux usagers.</p>
 
-          <h4>Le professionnel peut se consacrer à d'autres tâches</h4>
-          <p>En bibliothèque, on assiste à un "basculement des missions orientées collections vers des missions orientées public"(Dictionnaire de l'ENSSIB). Débarassés d'une partie du poids des tâches liées à la chaîne documentaire, les professionnels peuvent se consacrer à la partie "humaine" de leur travail.</p>
-
-          <h4>Le risque d'erreur humaine diminue</h4>
-          <p>Si le processus automatique est suffisamment bien conçu, le risque d'erreur lors de la réalisation de la tâche devrait être bas, de même que le risque qu'une erreur soit commise par un humain manipulant l'outil.</p>
-
-          <h4>Augmentation de la complétude des résultats obtenus</h4>
-          <p>Pour illustrer cet avantage, on peut prendre l'exemple des <i>Discovery tools</i>. Ces outils permettent la recherche au sein de l'entièreté des ressources de la bibliothèque (catalogue, bases de données, ressources électroniques, etc.), offrant des résultats de recherche bien plus complets et rapides que lors d'une recherche à la main dans les collections physiques de la bibliothèque.</p>
+          <p>Avec la multiplication des accès à l'information, internet qui en un clic permet aux utilisateurs de trouver ce qu'ils cherchent, les bibliothèques se trouvent dans une position instable où leur rôle à pris du plomb dans l'aile et nécessiite quelques ajustements. C'est donc le moment pour elles de trouver un moyen d'attirer les usagers en leurs proposant des produits et services dignes d'intérêt à leurs yeux et qui leurs donneront envie de revenir encore et encore. Le <i>Design Thinking</i> (et les autres méthodes de création similaires), en permettant l'innovation au départ de l'analyse d'un problème ressenti par les usagers va permettre aux bibliothèques de créer ce genre de produits et services et donc, de renforcer leur fréquentation.</p>
 
 
-
-
-          <h3>Inconvénients</h3>
-          <h4>Nécessité pour les professionnels d'avoir une formation technique solide et de garder leurs connaissances à jour</h4>
-          <p>L'automatisation des processus dépasse la sphère de connaissances traditionnelle des professionnels de l'information et de la documentation. ELle implique que, bien qu'ils ne doivent pas avoir eux même les capacités d'automatiser eux même les processus, ils aient une certaine compréhension de la manière dont les choses sont automatisées et une maîtrise suffisante des outils à leur disposition. La technologie évoluant rapidement, il est nécessaiire que les professionnels se tiennent informés et comprennent ces évolutions.</p>
-
-          <h4>La panne</h4>
-          <p>Lorsque des ordinateurs sont impliqués, la panne reste toujours une éventualité. Elle peut paralyser pendant un certain temps le service documentaire qui en souffre.</p>
-
-          <h4>Nécessité de collaborer avec les informaticiens pour la mise en place et la maintenance de certains outils</h4>
-          <p>Les informaticiens sont des professionnels possédant des connaissances spécialisées nécessaires à la création de processus automatisés et à la maintenance de ceux-ci. Il faut donc que les professionnels de l'information et de la documentation collaborent avec eux afin de rendre l'automatisation la plus efficace possible.</p>
-
-          <h4>Difficultés d'adaptation du public</h4>
-          <p>L'automatisation n'impacte pas seulement les compétences des professionnels de l'information et de la documentaion, mais également du public auquel il à affaire. Si on prend comme exemple les bornes de prêt automatiques, qui devraient représenter un gain de temps pour les professionnels. Ce gain de temps n'est effectif que si le public à une maîtrise suffisante de la technologie pour pouvoir utiliser seul ces bornes de prêt automatiques. Dans le cas contraire, le professionnel perdre le temps gagné potentiel à aider le public avec cette nouvelle technologie.</p>
           <br>
           <br>
           <p>Sources : </p>
-          <p>« Automatisation », Dictionnaire de l’ENSSIB, 20-nov-2013. [En ligne]. Disponible sur : http://www.enssib.fr/le-dictionnaire/automatisation. [Consulté le: 28-août-2017].
-</p>
+          <p>BELL, Steven J. "Design Thinking". <i>American Libraries</i>. 2008, vol. 39, n°1/2, p. 44-49. ISSN : 0002-9769</p>
 
         <br>
          <br>
