--- a/navbar.html
+++ b/navbar.html
@@ -50,7 +50,7 @@
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
                       <li class="active"><a href="./qe1">Question 1</a></li>
-                      <li class="active"><a href="#">Link</a></li>
+                      <li class="active"><a href="./qe2">Question 2</a></li>
                     </ul>
                   </div>
                 </div>
@@ -104,9 +104,7 @@
                 <div id="dropdown4-lvl1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="#">Link</a></li>
-                      <li class="active"><a href="#">Link</a></li>
-                      <li class="active"><a href="#">Link</a></li>
+                      <li class="active"><a href="./kanban">Mon Kanban</a></li>
                     </ul>
                   </div>
                 </div>
