--- a/kanban.html
+++ b/kanban.html
@@ -43,7 +43,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <p>J'ai décidé de réaliser mon Kanban avec GoogleSheets. Les lignes sans nom de tâche comptent comme prolongement de la ligne précédente dans les cas où ces tâches ont été interrompues et reprises ultérieurement.</p>
           <br>
           <br>
-          <img src="png/kanban.png" >
+          <img src="png/kanban.png" style="width:80%;>
 
         <br>
          <br>
