--- a/navbar.html
+++ b/navbar.html
@@ -104,7 +104,7 @@
                 <div id="dropdown4-lvl1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="./kanban">Mon Kanban</a></li>
+                      <li class="active"><a href="./kanban.html">Mon Kanban</a></li>
                     </ul>
                   </div>
                 </div>
