--- a/navbar.html
+++ b/navbar.html
@@ -49,8 +49,8 @@
                 <div id="dropdown1-lvl1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <ul class="nav navbar-nav">
-                      <li class="active"><a href="./qe1">Question 1</a></li>
-                      <li class="active"><a href="./qe2">Question 2</a></li>
+                      <li class="active"><a href="./qe1.html">Question 1</a></li>
+                      <li class="active"><a href="./qe2.html">Question 2</a></li>
                     </ul>
                   </div>
                 </div>
